typos, comments, naming conventions, simpliefied